# excelEnhance

./: .env-template  .gitignore  excelrefine.py  extract_xlsxcells.py  md2excel_tbl.py  pyproject.toml
data-tank/: 001-【Excel解析検証用(1)】設計_バッチ処理設計書_20241226.xlsx  002-【Excel解析検証用(2)】設計_外部インタフェース設計書_20241226.xlsx  003-【Excel解析テスト用】設計_Apexトリガー処理設計書_20220427_01.xlsx
